sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value gatValeur
      	setValeur(test-1,gatValeur(test));
                         ^