sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var valeur = 0;
  var test = 0;
  for (i <- 1 to getNombreValeurs-1){
   	valeur = getValeur(i);
    test = i-1;
   	while (test>=1 && getValeur(test)>valeur){
      	setValeur(test-1,gatValeur(test));
      	test=test-1;
    }
    setValeur(valeur,test)
  }
}